Complete Java bootstrap filesystems and module loading
Assisted-by: codex:gpt-6-astra